--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BookSpace</title>
+    <title>BookSpace | Home</title>
 </head>
 <body>
     <header>
         <!-- Logo do site -->
-        <img src="./assets/icons/BookSpace.png" alt="">
+        <div><h2 class="logo">
+            <img src="./assets/icons/BookSpace.png" alt="">
+            BookSpace
+        </h2>
+        </div>
 
         <!-- Lista com os menus para navegacao -->
         <ul>
@@ -31,14 +35,19 @@
         </ul>
     </header>
     <main>
-        <section>
-            <h1>Descubra sua proxima leitura</h1>
-            <span>Explore nossa colecao de milhares de livros de variados generos. Descubra seu proximo livro favorito
-                agora.</span>
-            <a href="#">Pesquisar Livros</a>
+        <section class="hero">
+            <div class="hero-content">
+                <h1>Descubra sua proxima leitura</h1>
+                <p>
+                    Explore nossa colecao de milhares de livros de variados generos. Descubra seu proximo livro favorito agora. 
+                </p>
+                <a href="catalog.html">Pesquisar Livros</a>               
+            </div>
         </section>
+        
         <section>
             <h2>Livros mais populares</h2>
+        
             <div><img src="" alt="">
                 <h3>Book Title</h3>
                 <span>Nome do Autor</span>
@@ -55,7 +64,7 @@
         <!-- CTA FINAL MENSAGEM DE CALL-TO-ACTION -->
         <section>
             <h2>Nao perca essa oportunidade</h2>
-            <a href="#">Leia agora</a>
+            <a href="catalog.html">Leia agora</a>
         </section>
     </main>
     <footer>
