modified:   404.html 	modified:   about.html 	modified:   catalog.html 	modified:   contact.html 	modified:   docs.html 	modified:   index.html 	modified:   item.html

--- a/index.html
+++ b/index.html
@@ -9,30 +9,32 @@
 <body>
     <header>
         <!-- Logo do site -->
-        <div><h2 class="logo">
-            <img src="./assets/icons/BookSpace.png" alt="">
-           
-        </h2>
+        <div>
+            <h2 class="logo">
+                <img src="./assets/icons/BookSpace.png" alt="BookSpace Logo">
+            </h2>
         </div>
 
-        <!-- Lista com os menus para navegacao -->
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="catalog.html">Catalogo</a>
-            </li>
-            <li>
-                <a href="about.html">Sobre</a>
-            </li>
-            <li>
-                <a href="contact.html">Contato</a>
-            </li>
-            <li>
-                <a href="docs.html">Docs</a>
-            </li>
-        </ul>
+        <!-- Menu de navegação -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html" aria-current="page">Home</a>
+                </li>
+                <li>
+                    <a href="catalog.html">Catálogo</a>
+                </li>
+                <li>
+                    <a href="about.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contato</a>
+                </li>
+                <li>
+                    <a href="docs.html" >Docs</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section class="hero">
