--- a/about.html
+++ b/about.html
@@ -10,34 +10,34 @@
 <body>
 
     <!-- NO FUTURO QUERO ATUALIZAR PARA O HEADER E O FOOTER FICAR FORA DO ARQUIVO HTML. PARA SER SIMPLES E FACIL DE EDITAR-->
-
     <header>
         <!-- Logo do site -->
         <div>
             <h2 class="logo">
-                <img src="./assets/icons/BookSpace.png" alt="">
-                
+                <img src="./assets/icons/BookSpace.png" alt="BookSpace Logo">
             </h2>
         </div>
 
-        <!-- Lista com os menus para navegacao -->
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="catalog.html">Catalogo</a>
-            </li>
-            <li>
-                <a href="about.html">Sobre</a>
-            </li>
-            <li>
-                <a href="contact.html">Contato</a>
-            </li>
-            <li>
-                <a href="docs.html">Docs</a>
-            </li>
-        </ul>
+        <!-- Menu de navegação -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="catalog.html">Catálogo</a>
+                </li>
+                <li>
+                    <a href="about.html" aria-current="page">Sobre Nos>
+                </li>
+                <li>
+                    <a href="contact.html">Contato</a>
+                </li>
+                <li>
+                    <a href="docs.html">Docs</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
