--- a/catalog.html
+++ b/catalog.html
@@ -12,29 +12,30 @@
         <!-- Logo do site -->
         <div>
             <h2 class="logo">
-                <img src="./assets/icons/BookSpace.png" alt="">
-
+                <img src="./assets/icons/BookSpace.png" alt="BookSpace Logo">
             </h2>
         </div>
 
-        <!-- Lista com os menus para navegacao -->
-        <ul>
-            <li>
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="catalog.html">Catalogo</a>
-            </li>
-            <li>
-                <a href="about.html">Sobre</a>
-            </li>
-            <li>
-                <a href="contact.html">Contato</a>
-            </li>
-            <li>
-                <a href="docs.html">Docs</a>
-            </li>
-        </ul>
+        <!-- Menu de navegação -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="catalog.html "aria-current="page">Catálogo</a>
+                </li>
+                <li>
+                    <a href="about.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contato</a>
+                </li>
+                <li>
+                    <a href="docs.html" >Docs</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section id="filter">
