fea(acessibility): adicionar figure e figcaption em item.html e about.html para melhorar descricao de imagens.

--- a/item.html
+++ b/item.html
@@ -50,9 +50,11 @@
         </div>
 
         <section class="book-item">
-            <div class="book-cover">
-                <img src="./assets/images/book_exemple.png" alt="">
-            </div>
+            <figure class="book-cover">
+                <img src="./assets/images/book_exemple.png" alt="Capa do livro.">
+                <figcaption>Capa do livro ~~~~, publicado no ano de 1949 pela editora Companhia das Letras.</figcaption>
+            </figure>
+            
             <div class="book-info">
                 <h1>Titulo</h1>
                 <h2>Autor</h2>
