chore(accessibility): adicionar link 'Pular para conteudo' e ancora no main em todas as paginas

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <a href="#main-content">Pular para o conteudo</a>
     <!-- NO FUTURO QUERO ATUALIZAR PARA O HEADER E O FOOTER FICAR FORA DO ARQUIVO HTML. PARA SER SIMPLES E FACIL DE EDITAR-->
     <header>
         <!-- Logo do site -->
@@ -39,7 +39,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <section>
             <h1>Missão</h1>
             <p>Democratizar o acesso à literatura clássica através de uma plataforma digital acessível e organizada.</p>
