--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
     <header>
         <!-- Logo do site -->
         <div>
@@ -37,7 +38,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <section id="filter">
             <h2>Ordenar por:</h2>
             <select name="category" id="category">
