--- a/docs.html
+++ b/docs.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
     <!-- HEADER: Navegação principal do site -->
     <header>
         <!-- Logo do site -->
@@ -42,7 +43,7 @@
     </header>
 
     <!-- MAIN: Conteúdo principal da documentação -->
-    <main>
+    <main id="main-content">
         <!-- Seção Hero: Introdução da página -->
         <section class="hero">
             <h1>Documentação do Projeto</h1>
