--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BookSpace | Home</title>
 </head>
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
     <header>
         <!-- Logo do site -->
         <div>
@@ -36,7 +37,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main-content">
         <section class="hero">
             <div class="hero-content">
                 <h1>Descubra sua proxima leitura</h1>
