--- a/item.html
+++ b/item.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
     <header>
 
         <!-- Logo do site -->
@@ -40,7 +41,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-content">
         <div id="breadcrumb">
             <a href="index.html">Home</a>
             <p>/</p>
