--- a/terms.html
+++ b/terms.html
@@ -10,6 +10,7 @@
     <title>Termos de Uso</title>
 </head>
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
         <header>
         <!-- Logo do site -->
         <div>
@@ -40,7 +41,7 @@
         </nav>
     </header>
 
- <main>
+ <main id="main-content">
   <section>
     <h2>Aceitação dos Termos</h2>
     <p>Ao acessar ou utilizar este site, você concorda em cumprir estes Termos de Uso.</p>
