--- a/404.html
+++ b/404.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Pagina nao encontrada</title>
 </head>
+<a href="#main-content">Pular para o conteudo</a>
+
 <body>
-    <h1>404 - Pagina nao encontrada</h1>
-    <h3>Ops! Parece que esta página não existe. Que tal voltar para a home?</h3>
-    <a href="index.html">Voltar para a pagina inicial</a>
+    <main id="main-content">
+        <h1>404 - Pagina nao encontrada</h1>
+        <h3>Ops! Parece que esta página não existe. Que tal voltar para a home?</h3>
+        <a href="index.html">Voltar para a pagina inicial</a>
+    </main>
 </body>
+
 </html>
