--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <title>Contact</title>
 </head>
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
     <header>
         <!-- Logo do site -->
         <div>
@@ -40,7 +41,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="main-content">
     
         <!-- Hidden Messages -->
         
