--- a/sitemap.html
+++ b/sitemap.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <a href="#main-content">Pular para o conteudo</a>
     <header>
         <!-- Logo do site -->
         <div>
@@ -40,7 +40,7 @@
     </header>
 
 
-    <main>
+    <main id="main-content">
         <section>
             <h1>Mapa do Site</h1>
             <p>Lista de todas as paginas do projeto.</p>
