chore(html-validation): ajustar marcacao HTML conforme W3C (estrutura semantica, aria, ids unicos)

--- a/404.html
+++ b/404.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Pagina nao encontrada</title>
 </head>
-<a href="#main-content">Pular para o conteudo</a>
-
 <body>
+    <a href="#main-content">Pular para o conteudo</a>
+    <header>
+        
+    </header>
     <main id="main-content">
         <h1>404 - Pagina nao encontrada</h1>
         <h3>Ops! Parece que esta página não existe. Que tal voltar para a home?</h3>
