parei para jogar cs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookSpace | Home</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/components/footer.css">
 </head>
 <body>
     <a href="#main-content">Pular para o conteudo</a>
@@ -71,9 +73,30 @@
         </section>
     </main>
     <footer>
+<div class="footer-containers">
+    <div class="footer-conainer">
+        <h4>Sobre nós</h4>
+        <p>BookSpace é um projeto ficcional de biblioteca digital desenvolvido para aprender desenvolvimento web full stack. </p>
+    </div>
+    <div class="footer-conainer">
+        <h4>Links Uteis</h4>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="catalog.html">Catálogo</a></li>
+            <li><a href="contact.html">Contato</a></li>
+            <li><a href="docs.html">Docs</a></li>
+        </ul>
+    </div>
+    <div class="footer-conainer">
+        <h4>Redes Sociais</h4>
+    </div>
+</div>
+<div>
         &copy; 2025 BookSpace
         <a href="privacy.html">Politica de privacidade</a>
         <span> e <a href="terms.html">Termos de uso</a></span>
+</div>
+
     </footer>
 </body>
 
