--- a/docs.html
+++ b/docs.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Documentação completa do projeto BookSpace - Guia para desenvolvedores e usuários">
     <title>BookSpace | Documentação</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
