--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="./assets/css/components/footer.css">
 </head>
 <body>
+    <div class="layout">
     <a href="#main-content">Pular para o conteudo</a>
+    
     <header>
+        <div class="container">
         <!-- Logo do site -->
         <div>
             <h2 class="logo">
@@ -38,8 +41,11 @@
                 </li>
             </ul>
         </nav>
+        </div>
     </header>
+
     <main id="main-content">
+        <div class="container">
         <section class="hero">
             <div class="hero-content">
                 <h1>Descubra sua proxima leitura</h1>
@@ -71,6 +77,7 @@
             <h2>Nao perca essa oportunidade</h2>
             <a href="catalog.html">Leia agora</a>
         </section>
+</div>
     </main>
     <footer>
 <div class="footer-containers">
@@ -98,6 +105,7 @@
 </div>
 
     </footer>
+    </div>
 </body>
 
 </html>
