--- a/terms.html
+++ b/terms.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos de Uso</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
     <a href="#main-content">Pular para o conteudo</a>
