feat(index): aplicar sistema de grid na pagina inicial

--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
     <main id="main-content">
         <div class="container">
         <section class="hero">
-            <div class="hero-content">
+            <div class="grid">
+            <div class="col-7 hero-content">
                 <h1>Descubra sua proxima leitura</h1>
                 <p>
                     Explore nossa colecao de milhares de livros de variados generos. Descubra seu proximo livro favorito agora. 
                 </p>
                 <a href="catalog.html">Pesquisar Livros</a>               
+            </div>
             </div>
         </section>
         
