feat(home): aplicar sistema de grid na pagina inicial

--- a/index.html
+++ b/index.html
@@ -60,24 +60,32 @@
         
         <section>
             <h2>Livros mais populares</h2>
-        
-            <div><img src="" alt="">
+            <div class="grid">
+            <div class="col-4">
+            <img src="" alt="">
                 <h3>Book Title</h3>
                 <span>Nome do Autor</span>
             </div>
-            <div><img src="" alt="">
+            <div class="col-4">
+                <img src="" alt="">
                 <h3>Book Title</h3>
                 <span>Nome do Autor</span>
             </div>
-            <div><img src="" alt="">
+            <div class="col-4">
+                <img src="" alt="">
                 <h3>Book Title</h3>
                 <span>Nome do Autor</span>
+            </div>
             </div>
         </section>
         <!-- CTA FINAL MENSAGEM DE CALL-TO-ACTION -->
         <section>
+            <div class="grid">
+                <div class="col-12" style="text-align: center;">
             <h2>Nao perca essa oportunidade</h2>
             <a href="catalog.html">Leia agora</a>
+            </div>
+            </div>
         </section>
 </div>
     </main>
