feat(sitemap): aplicar grid nas listas em duas colunas

--- a/sitemap.html
+++ b/sitemap.html
@@ -49,22 +49,27 @@
 
         <section>
             <h2>Lista de Paginas.</h2>
-            <h3>Principais</h3>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="catalog.html">Catalogo</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="contact.html">Contato</a></li>
-                <li><a href="docs.html">Documentacao</a></li>
-            </ul>
+            <div class="grid">
+                <nav class="col-6" aria-label="" Paginas principais">
+                    <h3>Principais</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="catalog.html">Catalogo</a></li>
+                        <li><a href="about.html">Sobre</a></li>
+                        <li><a href="contact.html">Contato</a></li>
+                        <li><a href="docs.html">Documentacao</a></li>
+                    </ul>
+                </nav>
 
-            <h3>Secundarias</h3>
-            <ul>
-                <li><a href="item.html">Detalhes do Livro</a></li>
-                <li><a href="privacy.html">Politica de Privacidade</a></li>
-                <li><a href="terms.html">Termos de Uso</a></li>
-                <li><a href="404.html">Pagina 404</a></li>
-            </ul>
+                <nav class="col-6" aria-label="Páginas secundárias">
+                    <h3>Secundarias</h3>
+                    <ul>
+                        <li><a href="item.html">Detalhes do Livro</a></li>
+                        <li><a href="privacy.html">Politica de Privacidade</a></li>
+                        <li><a href="terms.html">Termos de Uso</a></li>
+                        <li><a href="404.html">Pagina 404</a></li>
+                    </ul>
+                </nav>
         </section>
     </main>
 
