feat(item): aplicar grid

--- a/item.html
+++ b/item.html
@@ -52,64 +52,73 @@
         </div>
 
         <section class="book-item">
-            <figure class="book-cover">
-                <img src="./assets/images/book_exemple.png" alt="Capa do livro.">
-                <figcaption>Capa do livro ~~~~, publicado no ano de 1949 pela editora Companhia das Letras.</figcaption>
-            </figure>
-            
-            <div class="book-info">
-                <h1>Titulo</h1>
-                <h2>Autor</h2>
-                <p class="description">Descricao - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero at
-                    officiis, similique recusandae beatae sequi! Voluptatibus dolore saepe accusantium, nam, nisi facere
-                    suscipit, in magni optio iste tempora qui corrupti?</p>
-                <a href="#">Adiconar a Biblioteca</a>
-            </div>
-        </section>
+            + <div class="grid">
+                + <figure class="book-cover col-5">
+                    + <img src="./assets/images/book_exemple.png" alt="Capa do livro.">
+                    + <figcaption>Capa do livro ~~~~, publicado no ano de 1949 pela editora Companhia das Letras.
+                    </figcaption>
+                    + </figure>
+                +
+                + <div class="book-info col-7">
+                    + <h1>Titulo</h1>
+                    + <h2>Autor</h2>
+                    + <p class="description">Descricao - Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Libero at
+                        + officiis, similique recusandae beatae sequi! Voluptatibus dolore saepe accusantium, nam, nisi
+                        facere
+                        + suscipit, in magni optio iste tempora qui corrupti?</p>
+                    + <a href="#">Adiconar a Biblioteca</a>
+                    + </div>
+                + </div>
+            + </section>
         <section id="book-specs">
-
-            <h3>Especificações</h3>
-            <table>
-                <tr>
-                    <th>Páginas</th>
-                    <th>Editora</th>
-                    <th>Ano</th>
-                    <th>ISBN</th>
-                    <th>Idioma</th>
-                    <th>Categoria</th>
-                </tr>
-                <tr>
-                    <td>328</td>
-                    <td>Companhia das Letras</td>
-                    <td>1949</td>
-                    <td>978-0451524935</td>
-                    <td>Português</td>
-                    <td>Ficção Distópica</td>
-                </tr>
-            </table>
-        </section>
-        <section id="book-recomendation">
-            <h3>Recomendações baseadas nesse Livro</h3>
-            <div class="card-recomendation">
-                <img src="./assets/images/book_exemple.png" alt="">
-                <h3>Nome do Livro</h3>
-                <p>Autor</p>
-            </div>
-            <div class="card-recomendation">
-                <img src="./assets/images/book_exemple.png" alt="">
-                <h3>Nome do Livro</h3>
-                <p>Autor</p>
-            </div>
-            <div class="card-recomendation">
-                <img src="./assets/images/book_exemple.png" alt="">
-                <h3>Nome do Livro</h3>
-                <p>Autor</p>
-            </div>
-            <div class="card-recomendation">
-                <img src="./assets/images/book_exemple.png" alt="">
-                <h3>Nome do Livro</h3>
-                <p>Autor</p>
-            </div>
+            + <div class="grid">
+                + <div class="col-12">
+                    + <h3>Especificações</h3>
+                    + <table>
+                        <tr>
+                            <th>Páginas</th>
+                            <th>Editora</th>
+                            <th>Ano</th>
+                            <th>ISBN</th>
+                            <th>Idioma</th>
+                            <th>Categoria</th>
+                        </tr>
+                        <tr>
+                            <td>328</td>
+                            <td>Companhia das Letras</td>
+                            <td>1949</td>
+                            <td>978-0451524935</td>
+                            <td>Português</td>
+                            <td>Ficção Distópica</td>
+                        </tr>
+                        +
+                    </table>
+                    + </div>
+                + </div>
+            + </section>
+        <div class="grid">
+            + <div class="card-recomendation col-3">
+                + <img src="./assets/images/book_exemple.png" alt="">
+                + <h3>Nome do Livro</h3>
+                + <p>Autor</p>
+                + </div>
+            + <div class="card-recomendation col-3">
+                + <img src="./assets/images/book_exemple.png" alt="">
+                + <h3>Nome do Livro</h3>
+                + <p>Autor</p>
+                + </div>
+            + <div class="card-recomendation col-3">
+                + <img src="./assets/images/book_exemple.png" alt="">
+                + <h3>Nome do Livro</h3>
+                + <p>Autor</p>
+                + </div>
+            + <div class="card-recomendation col-3">
+                + <img src="./assets/images/book_exemple.png" alt="">
+                + <h3>Nome do Livro</h3>
+                + <p>Autor</p>
+                + </div>
+            + </div>
 
         </section>
     </main>
