--- a/catalog.html
+++ b/catalog.html
@@ -34,73 +34,93 @@
                     <a href="contact.html">Contato</a>
                 </li>
                 <li>
-                    <a href="docs.html" >Docs</a>
+                    <a href="docs.html">Docs</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main id="main-content">
-        <section id="filter">
-            <h2>Ordenar por:</h2>
-            <select name="category" id="category">
-                <option value="romance">Romance</option>
-                <option value="terror">Terror</option>
-                <option value="ficcao">Ficcao</option>
-            </select>
-            <input type="text">
-            <button>Filtrar</button>
-        </section>
-        <section id="catalog">
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/61t0bwt1s3L._AC_UF894,1000_QL80_.jpg" alt="">
-                <h3>1984</h3>
-                <span>George Orwell</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/61ZzV24+UlL._UF1000,1000_QL80_.jpg" alt="">
-                <h3>Dom Casmurro</h3>
-                <span>Machado de Assis</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/81Y1hj9b0tL._AC_UF1000,1000_QL80_.jpg" alt="">
-                <h3>O Cortiço </h3>
-                <span>Aluísio Azevedo</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/7134u8yD1YL._UF894,1000_QL80_.jpg" alt="">
-                <h3>Pride and Prejudice </h3>
-                <span>Jane Austen</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEqjQrEh_NYSjYS00vWrsES-3-qga0RGZ-cQul1j74H-TKzGU9rrC324ZzJ0vTq0fVEQ-q3qxi76uap7jqkt9dngj5pCxnkRygjQPA8fG0DXtnLETJX1LKhDOEGG7vCqzSnLy60sBEJ4E/s1600/capa-cugat-fitzgerald.jpeg" alt="">
-                <h3>The Great Gatsby </h3>
-                <span>F. Scott Fitzgerald</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/81aY1lxk+9L.jpg" alt="">
-                <h3>To Kill a Mockingbird</h3>
-                <span>Harper Lee</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/91RWiM+C-LL._UF894,1000_QL80_.jpg" alt="">
-                <h3>Memórias Póstumas de Brás Cubas</h3>
-                <span>Machado de Assis</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-            <div class="card">
-                <img class="book_cover" src="https://m.media-amazon.com/images/I/91fQEUwFMyL.jpg" alt="">
-                <h3>The Catcher in the Rye </h3>
-                <span>J.D. Salinger</span>
-                <a class="button" href="item.html">Ver detalhes</a>
-            </div>
-        </section>
+        <div class="grid">
+            <!-- FILTRO -->
+            <section id="filter" class="col-12">
+                <h2>Ordenar por:</h2>
+                <select name="category" id="category">
+                    <option value="romance">Romance</option>
+                    <option value="terror">Terror</option>
+                    <option value="ficcao">Ficção</option>
+                </select>
+                <input type="text" placeholder="Buscar título ou autor">
+                <button>Filtrar</button>
+            </section>
+
+            <!-- CATÁLOGO -->
+            <section id="catalog" class="col-12 grid">
+                <div class="col-3 card">
+                    <img class="book_cover"
+                        src="https://m.media-amazon.com/images/I/61t0bwt1s3L._AC_UF894,1000_QL80_.jpg" alt="">
+                    <h3>1984</h3>
+                    <span>George Orwell</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover" src="https://m.media-amazon.com/images/I/61ZzV24+UlL._UF1000,1000_QL80_.jpg"
+                        alt="">
+                    <h3>Dom Casmurro</h3>
+                    <span>Machado de Assis</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover"
+                        src="https://m.media-amazon.com/images/I/81Y1hj9b0tL._AC_UF1000,1000_QL80_.jpg" alt="">
+                    <h3>O Cortiço</h3>
+                    <span>Aluísio Azevedo</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover" src="https://m.media-amazon.com/images/I/7134u8yD1YL._UF894,1000_QL80_.jpg"
+                        alt="">
+                    <h3>Pride and Prejudice</h3>
+                    <span>Jane Austen</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover"
+                        src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhEqjQrEh_NYSjYS00vWrsES-3-qga0RGZ-cQul1j74H-TKzGU9rrC324ZzJ0vTq0fVEQ-q3qxi76uap7jqkt9dngj5pCxnkRygjQPA8fG0DXtnLETJX1LKhDOEGG7vCqzSnLy60sBEJ4E/s1600/capa-cugat-fitzgerald.jpeg"
+                        alt="">
+                    <h3>The Great Gatsby</h3>
+                    <span>F. Scott Fitzgerald</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover" src="https://m.media-amazon.com/images/I/81aY1lxk+9L.jpg" alt="">
+                    <h3>To Kill a Mockingbird</h3>
+                    <span>Harper Lee</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover" src="https://m.media-amazon.com/images/I/91RWiM+C-LL._UF894,1000_QL80_.jpg"
+                        alt="">
+                    <h3>Memórias Póstumas de Brás Cubas</h3>
+                    <span>Machado de Assis</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+
+                <div class="col-3 card">
+                    <img class="book_cover" src="https://m.media-amazon.com/images/I/91fQEUwFMyL.jpg" alt="">
+                    <h3>The Catcher in the Rye</h3>
+                    <span>J.D. Salinger</span>
+                    <a class="button" href="item.html">Ver detalhes</a>
+                </div>
+            </section>
+        </div>
     </main>
+
     <footer>
         &copy; 2025 BookSpace
         <a href="privacy.html">Politica de privacidade</a>
