feat: 10 - estilizar cards de livros - Adiciona corpo, tipografia, categoria e preco do livro - Mantem sombra base e hover (translateY -4px) - Imagem com aspect-ratio 2/3 conforme a tarefa Closes #10

--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
             </div>
             </div>
         </section>
+
+        <!-- TESTE -->
+
+        <section class="cards-grid" aria-label="Livros">
+  <article class="card">
+    <img class="card__image" src="assets/images/book_exemple.png" alt="Capa do livro The Book Title">
+    <div class="card__body">
+      <h3 class="card__title">The Book Title</h3>
+      <p class="card__author">Author Name</p>
+      <span class="card__category">Category</span>
+    </div>
+    <div class="card__footer">
+      <span class="card__price">$19.99</span>
+    </div>
+  </article>
+</section>
+
+<!-- TESTE -->
         
         <section>
             <h2>Livros mais populares</h2>
